--- a/index.html
+++ b/index.html
@@ -19,13 +19,46 @@
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <h2>Welcome to Green Future Initiative</h2>
         <p>Our mission is to promote sustainable living and environmental conservation.</p>
         <img src="images/image1.jpg" alt="Nature">
     </main>
 
+    <section>
+        <h3>About Us</h3>
+        <p>We are a nonprofit organization dedicated to protecting the environment.</p>
+    </section>
+
+    <section>
+        <h3>Our Activities</h3>
+        <p><strong>Community Clean-Ups:</strong> We organize clean-up drives in various locations.</p>
+        <p><strong>Tree Planting:</strong> Join us in planting trees to restore the environment.</p>
+    </section>
+
+    <section>
+        <h3>Latest Blog Posts</h3>
+        <p><strong>Why Renewable Energy Matters</strong></p>
+        <p>Renewable energy sources are key to a sustainable future.</p>
+    </section>
+
+    <section>
+        <h3>Contact Us</h3>
+        <form action="mailto:jagjot2@my.capilanou.ca" method="post" enctype="text/plain">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea><br>
+
+            <button type="submit">Send</button>
+        </form>
+    </section>
+    
     <footer>
         <p>&copy; 2025 Green Future Initiative | <a href="contact.html">Contact Us</a></p>
     </footer>
