--- a/index.html
+++ b/index.html
@@ -23,44 +23,35 @@
     <main>
         <h2>Welcome to Green Future Initiative</h2>
         <p>Our mission is to promote sustainable living and environmental conservation.</p>
-        <img src="images/image1.jpg" alt="Nature">
+        
+        <section>
+            <h3>Why Join Us?</h3>
+            <p>By participating in our activities, you become part of a global movement dedicated to preserving our planet. Whether you are an individual, a student, or a corporate partner, there is always a way to get involved.</p>
+        </section>
+
+        <section>
+            <h3>Image Gallery</h3>
+            <div class="gallery">
+                <img src="images/IMG_1337.jpg" alt="Beautiful River and Forest" class="responsive-image">
+                <img src="images/download.jfif" alt="Community Cleanup Initiative" class="responsive-image">
+                <img src="images/download (1).jfif" alt="Renewable Energy Wind Farm" class="responsive-image">
+            </div>
+        </section>
+
+        <section>
+            <h3>Get Involved</h3>
+            <p>🌍 Whether you want to volunteer, collaborate, donate, or simply learn more, Green Future Initiative is here to support your journey toward sustainability. Together, we can create a lasting impact and build a better future—one step at a time.</p>
+            <p>
+                <a href="contact.html" class="button">Get Involved</a>
+                <a href="support.html" class="button">Support Our Work</a>
+            </p>
+        </section>
     </main>
-
-    <section>
-        <h3>About Us</h3>
-        <p>We are a nonprofit organization dedicated to protecting the environment.</p>
-    </section>
-
-    <section>
-        <h3>Our Activities</h3>
-        <p><strong>Community Clean-Ups:</strong> We organize clean-up drives in various locations.</p>
-        <p><strong>Tree Planting:</strong> Join us in planting trees to restore the environment.</p>
-    </section>
-
-    <section>
-        <h3>Latest Blog Posts</h3>
-        <p><strong>Why Renewable Energy Matters</strong></p>
-        <p>Renewable energy sources are key to a sustainable future.</p>
-    </section>
-
-    <section>
-        <h3>Contact Us</h3>
-        <form action="mailto:jagjot2@my.capilanou.ca" method="post" enctype="text/plain">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea><br>
-
-            <button type="submit">Send</button>
-        </form>
-    </section>
     
     <footer>
         <p>&copy; 2025 Green Future Initiative | <a href="contact.html">Contact Us</a></p>
+        <p>By Jagjot Singh</p>
     </footer>
 </body>
 </html>
+
