--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <main>
         <h2>Get in Touch</h2>
         <form action="mailto:jagjot2@my.capilanou.ca" method="post" enctype="text/plain">
-            <label for="name">Name:</label>
+            <label for="Jagjot Singh">Name:</label>
             <input type="text" id="name" name="name" required><br>
 
             <label for="email">Email:</label>
